src/components/Footer/Footer.css
/* Footer component CSS */
.social-icons {
    display: flex;
    flex-direction: row;
    grid-gap: 30px;
    list-style: none;
    text-align: center;
    width: 8vw;
    top: 10px;
    margin-left: 2%;
    margin-right: 2%; 
}

.footer {
    background: #264653;
    height: 50px;
    align-items: center;
    font-size: 1rem;
    position: fixed;
    z-index: 6;
    width: 100%;
    opacity: 90%;
    bottom: 0px;
    display: flex;
    justify-content: center;
}

.social-icon {
    width: 1.6rem;
    height: auto;
}

.social-icon:hover {
    background-color: white;
    border-radius: 50%;
    transition: all 0.2s ease-out;
    color: rgb(36, 36, 36);

}

